// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input smaple 1`] = `
Array [
  <input
    className="input--undefined  css-18urk4r"
    data-testid="input--test"
    placeholder="Input test"
  />,
  "",
]
`;

exports[`Input smaple size big 1`] = `
Array [
  <input
    className="input--big  css-18urk4r"
    data-testid="input--test"
    placeholder="Input test"
  />,
  "",
]
`;

exports[`Input smaple type password 1`] = `
Array [
  <input
    className="input--undefined  css-18urk4r"
    data-testid="input--test"
    placeholder="Input test"
    type="password"
  />,
  "",
]
`;
